--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.1.2-4'
+    ext.kotlin_version = '1.3.50'
     repositories {
         jcenter()
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:3.5.3'
 //        classpath 'com.jakewharton:butterknife-gradle-plugin:8.6.0'//butterknife
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -27,16 +26,16 @@ allprojects {
 // Define versions in a single place
 ext {
     // Sdk and tools,use lastest
-    minSdkVersion = 15
-    targetSdkVersion = 26
-    compileSdkVersion = 26
-    buildToolsVersion = '26.0.2'
-    supportLibraryVersion = '26.1.0'
+    minSdkVersion = 21
+    targetSdkVersion = 29
+    compileSdkVersion = 29
+    buildToolsVersion = '29.0.2'
+//    supportLibraryVersion = '26.1.0'
     constraintLayoutVersion = '1.1.2'
     roomLibraryVersion = '1.1.1'
 
     //third-party lib
-    butterknifeVersion = '8.6.0'//https://github.com/JakeWharton/butterknife
+    butterknifeVersion = '10.1.0'//https://github.com/JakeWharton/butterknife
 
     //ui widget
     flippableStackViewVersion = '1.2.1'//https://github.com/blipinsk/FlippableStackView
