--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,12 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 #Sat May 27 14:27:30 CST 2017
-systemProp.http.proxyHost=127.0.0.1
 org.gradle.jvmargs=-Xmx1536m
-systemProp.http.proxyPort=10080
 Android.useDeprecatedNdk=true
+
+# https://developer.android.com/topic/libraries/support-library/androidx-rn
+android.useAndroidX=true
+# Automatically convert third-party libraries to use AndroidX
+android.enableJetifier=true
+# Kotlin code style for this project: "official" or "obsolete":
+kotlin.code.style=official
