--- a/mydebug/build.gradle
+++ b/mydebug/build.gradle
@@ -5,12 +5,11 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
 
-
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 1
-        versionName "1.0"
+        versionCode 20191218
+        versionName "2019.12.18"
         buildConfigField("String", "MYDEBUG_BUILD_DATE", "\"${new Date().format("yyyy-MM-dd HH:mm:ss")}\"")
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles 'consumer-rules.pro'
@@ -34,6 +33,7 @@ dependencies {
     implementation "com.google.android.material:material:1.0.0"
 
     def beagleVersion = "1.3.1"
-    debugImplementation "com.github.pandulapeter.beagle:beagle:$beagleVersion"
-    releaseImplementation "com.github.pandulapeter.beagle:beagle-noop:$beagleVersion"
+    api "com.github.pandulapeter.beagle:beagle:$beagleVersion"
+//    debugImplementation "com.github.pandulapeter.beagle:beagle:$beagleVersion"
+//    releaseImplementation "com.github.pandulapeter.beagle:beagle-noop:$beagleVersion"
 }
